--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,12 @@ dependencies:
   cupertino_icons: ^1.0.6
   table_calendar: ^3.1.2
   go_router: ^14.2.3
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
+  google_sign_in: ^6.2.1
+  fluttertoast: ^8.2.8
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
