--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,19 +38,20 @@ dependencies:
   provider: ^6.1.2
   camera: ^0.11.0+1
   image_picker: ^1.1.2
-  google_generative_ai: ^0.4.4
+  google_generative_ai:  ^0.4.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   table_calendar: ^3.1.2
   go_router: ^14.2.3
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.16.0
-  cloud_firestore: ^4.14.0
+  firebase_core: ^3.3.0
+  firebase_auth: ^5.1.4
+  cloud_firestore: ^5.2.1
   google_sign_in: ^6.2.1
   fluttertoast: ^8.2.8
   flutter_secure_storage: ^9.2.2
+  firebase_storage: ^12.1.3
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +62,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
