--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   fluttertoast: ^8.2.8
   flutter_secure_storage: ^9.2.2
   firebase_storage: ^12.1.3
+  http: ^1.2.2
+  url_launcher_android: ^6.3.9
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
